examples/kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: app-service
spec:
  selector:
    service: app-service
  type: ClusterIP
  ports:
  - port: 9090
